--- a/app/dash/SelectableList.module.css
+++ b/app/dash/SelectableList.module.css
@@ -4,8 +4,8 @@
 }
 
 .list {
-  list-style-type: disc;
-  padding-left: 20px;
+  overflow: auto;
+  max-height: 70vh;
 }
 
 .item {
@@ -25,7 +25,7 @@
 }
 
 .notSelected {
-    border: 2px solid transparent;
+  border: 2px solid transparent;
   background-color: lightgray;
   color: black;
 }
